# relaxor

./: .gitignore  CMakeLists.txt  README.md  analysis.py  experiment.cpp  experiment.h  experiment.py  fitter.py  impresor.cpp  impresor.h  labels.py  libmat.cpp  main.cpp  main.py  makefile  material.cpp  material.h  plots.p  plots.py  plotsf.p  plotter.py  reference.py  rel.cpp  relaxor.kdev4  sistema.cpp  sistema.h  tester.cpp  tester.h  utils.py
data/: errorconvertor.py
